<resources>
    <string name="app_name">Student-portal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_portal_add">PortalAdd</string>
    <string name="BackButton"><![CDATA[<]]></string>
    <string name="give_a_url">Give a url:</string>
    <string name="https">https://</string>
    <string name="title">Title:</string>
    <string name="name_for_the_title">Name for the Title</string>
    <string name="add_portal">ADD PORTAL</string>
    <string name="name">Name</string>
</resources>
